--- a/checkout.html
+++ b/checkout.html
@@ -82,6 +82,11 @@
                             Cart <span id="cart-count" class="badge bg-primary rounded-pill">0</span>
                         </a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="./checkout.html">
+                            Checkout <span id="checkout" ></span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -267,10 +272,10 @@
                 <div class="col-md-4">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="cart.html" class="text-white">Cart</a></li>
-                        <li><a href="#" class="text-white">About Us</a></li>
-                        <li><a href="#" class="text-white">Contact</a></li>
+                        <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                        <li><a href="cart.html" class="text-white text-decoration-none">Cart</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">Check Out</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
