--- a/checkout.html
+++ b/checkout.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="fas fa-shopping-bag me-2"></i>ShopEasy
@@ -275,7 +275,7 @@
                         <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
                         <li><a href="cart.html" class="text-white text-decoration-none">Cart</a></li>
                         <li><a href="#" class="text-white text-decoration-none">Check Out</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Contact</a></li>
+                        
                     </ul>
                 </div>
                 <div class="col-md-4">
